<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfume"
    tools:context="com.example.jaedag.quizerthon.WelcomeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="384dp"
                  android:layout_height="567dp"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:weightSum="1"
                  tools:layout_editor_absoluteX="0dp"
                  tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowRadius="3"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="65sp"
            android:textStyle="bold"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/game_rules"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                android:layout_width="164dp"
                android:layout_height="71dp"
                android:background="@color/usedButton"
                android:backgroundTint="@android:color/background_dark"
                android:text="Get Started!"
                android:textAllCaps="false"
                android:textColor="@color/textColour"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
