<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/perfume">


    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="28sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.50"
            android:background="@color/buttonColour"
            android:padding="24dp"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textColour"
            android:textSize="24sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/false_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColour"
            android:longClickable="false"
            android:padding="24dp"
            android:text="@string/false_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textColour"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:clickable="false"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonColour"
        android:drawablePadding="4dp"
        android:drawableRight="@drawable/arrow_right"
        android:padding="24dp"
        android:text="@string/next_button"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="23sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

</LinearLayout>

